--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,34 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+arrow==1.2.2
+binaryornot==0.4.4
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.1
+colorama==0.4.4
+cookiecutter==1.7.3
+Flask==2.1.1
+gunicorn==20.1.0
+idna==3.3
+imbalanced-learn==0.9.0
+imblearn==0.0
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+jinja2-time==0.2.0
+joblib==1.1.0
+MarkupSafe==2.1.1
+numpy==1.22.3
+pandas==1.4.1
+poyo==0.5.0
+python-dateutil==2.8.2
+python-slugify==6.1.1
+pytz==2022.1
+requests==2.27.1
+scikit-learn==1.0.2
+scipy==1.8.0
+six==1.16.0
+text-unidecode==1.3
+threadpoolctl==3.1.0
+urllib3==1.26.9
+Werkzeug==2.1.0
+zipp==3.7.0
